// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finder Drag & Drop should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div class="drop-zone"></div>
      <div draggable="true" class="item draggable">
        <!---->
        <div class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div class="drop-zone"></div>
      <div draggable="true" class="item draggable">
        <!---->
        <div class="inner-item">Test 12</div>
        <!---->
      </div>
      <div class="drop-zone last"></div>
    </div>
  </div>
</div>
`;

exports[`Finder Selection should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div draggable="false" class="item"><input type="checkbox">
        <div class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div draggable="false" class="item"><input type="checkbox">
        <div class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div draggable="false" class="item">
        <!---->
        <div class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div draggable="false" class="item">
        <!---->
        <div class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with expanded item and emit event 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div draggable="false" class="item expanded">
        <!---->
        <div class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div draggable="false" class="item">
        <!---->
        <div class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with filter 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div draggable="false" class="item">
        <!---->
        <div class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with initial filter 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div draggable="false" class="item">
        <!---->
        <div class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div draggable="false" class="item">
        <!---->
        <div class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with no children 1`] = `<div class="tree-container"></div>`;
